[tool.poetry]
name = "analytics-module"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
adafruit-blinka = "^8.46.1"
adafruit-circuitpython-mcp3xxx = "^1.4.17"
numpy = "^2.0.1"
protobuf = "^5.27.3"
pydantic = "^2.8.2"
prometheus-client = "^0.20.0"
confuse = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
