[tool.poetry]
name = "analytics-module"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
adafruit-blinka = "^8.46.1"
adafruit-circuitpython-mcp3xxx = "^1.4.17"
numpy = "^2.0.1"
protobuf = "^5.27.3"
pydantic = "^2.8.2"
prometheus-client = "^0.20.0"
confuse = "^2.0.1"
colorlog = "^6.8.2"
scipy = "^1.14.0"
pytest = "^8.3.2"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ['ignore::DeprecationWarning']
